# kis_sdk

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
cmake/: KIS_SDKConfig.cmake.in  KIS_SDKVariants.cmake.in
kis_templates/kis_asset_package/: cookiecutter.json
kis_templates/kis_asset_package/kis_{{cookiecutter.package_name}}/: CMakeLists.txt  kis.package.cmake
kis_templates/kis_lib_template/: cookiecutter.json
kis_templates/kis_lib_template/hooks/: post_gen_project.py
kis_templates/kis_lib_template/kis_{{cookiecutter.module_name}}/: CMakeLists.txt  CMakePresets.json  README.md  kis.package.cmake
kis_templates/kis_lib_template/kis_{{cookiecutter.module_name}}/cmake/: package_setup.cmake
kis_templates/kis_lib_template/kis_{{cookiecutter.module_name}}/main/include/kis_{{cookiecutter.module_name}}/: kis_{{cookiecutter.module_name}}.hpp
kis_templates/kis_lib_template/kis_{{cookiecutter.module_name}}/main/src/: kis_{{cookiecutter.module_name}}.cpp
kis_templates/kis_lib_template/kis_{{cookiecutter.module_name}}/secondary/: CMakeLists.txt
kis_templates/kis_lib_template/kis_{{cookiecutter.module_name}}/secondary/tests/: {{cookiecutter.module_name}}.test.cpp
kis_templates/kis_lib_template/kis_{{cookiecutter.package_name}}/: CMakeLists.txt  README.md  kis.package.cmake  kis.package.json
kis_templates/kis_lib_template/kis_{{cookiecutter.package_name}}/cmake/: build_system_bootstrap.cmake
kis_templates/kis_lib_template/kis_{{cookiecutter.package_name}}/main/include/kis_{{cookiecutter.package_name}}/: kis_{{cookiecutter.package_name}}.hpp
kis_templates/kis_lib_template/kis_{{cookiecutter.package_name}}/main/src/: kis_{{cookiecutter.package_name}}.cpp
kis_templates/kis_lib_template/kis_{{cookiecutter.package_name}}/secondary/: CMakeLists.txt
kis_templates/kis_lib_template/kis_{{cookiecutter.package_name}}/secondary/tests/: {{cookiecutter.package_name}}.test.cpp
tests/: CMakeLists.txt  test_utilities.cmake
tests/test_discovery/: _test_platform_overrides.cmake
tests/test_utils/: _test_fatal_error.cmake  test_kis_parse_triplet_list.cmake  test_regex_escape.cmake
tests/test_utils/helpers/: script_that_fails.cmake
tests/test_warning_summary/: test_collect_warning.cmake
tools/: dump_cmake.py  parallel_fetch.py  repeat_ctest.bat  repeat_ctest.py
